# cuecard

./: .env.example  .gitignore  README.md
.github/workflows/: build-chrome.yml  build-firefox.yml  build-mac.yml  build-safari.yml  build-windows.yml  clean.yml  release-app.yml  release-extension.yml
cuecard-app/: .gitignore  README.md  package-lock.json  package.json
cuecard-app/latest/: darwin-x86_64-latest.example.json  windows-aarch64-latest.example.json  windows-x86_64-latest.example.json
cuecard-app/src/: analytics.js  index.html  main.js  styles.css
cuecard-app/src-tauri/: .gitignore  Cargo.toml  build.rs  firebase-config.example.json  tauri.conf.json
cuecard-app/src-tauri/capabilities/: default.json
cuecard-app/src-tauri/icons/: icon.icns
cuecard-app/src-tauri/src/: lib.rs  main.rs
cuecard-extension/: README.md  package-lock.json  package.json
cuecard-extension/manifests/: manifest.chrome.json  manifest.firefox.json
cuecard-extension/scripts/: ExportOptions.plist  build.js  release.js
cuecard-extension/src/background/: background.js
cuecard-extension/src/content/: content.js
cuecard-extension/src/popup/: popup.css  popup.html  popup.js
cuecard-mobile/: MOBILE_IMPLEMENTATION_PLAN.md  index.html  package-lock.json  package.json
cuecard-mobile/android/: build.gradle.kts
cuecard-mobile/android/app/: build.gradle.kts
cuecard-mobile/android/app/src/main/java/com/thisisnsh/cuecard/android/models/: TeleprompterParser.kt
cuecard-mobile/android/app/src/main/java/com/thisisnsh/cuecard/android/services/: TeleprompterPiPManager.kt
cuecard-mobile/android/app/src/main/java/com/thisisnsh/cuecard/android/ui/screens/: HomeScreen.kt  LoginScreen.kt  MainScreen.kt  SavedNotesScreen.kt  SettingsScreen.kt  TeleprompterScreen.kt
cuecard-mobile/android/app/src/main/java/com/thisisnsh/cuecard/android/ui/theme/: AppColors.kt
cuecard-mobile/ios/CueCard/CueCard/: CueCardApp.swift
cuecard-mobile/ios/CueCard/CueCard.xcodeproj/: project.pbxproj
cuecard-mobile/ios/CueCard/CueCard.xcodeproj/xcshareddata/xcschemes/: CueCard.xcscheme
cuecard-mobile/ios/CueCard/CueCard/Services/: AuthenticationService.swift  TeleprompterPiPManager.swift
cuecard-mobile/ios/CueCard/CueCard/Views/: HomeView.swift  LoginView.swift  ProfileView.swift  SettingsView.swift  TeleprompterView.swift
cuecard-mobile/src/: main.ts  styles.css
cuecard-mobile/src-tauri/: Cargo.toml  tauri.conf.json
cuecard-mobile/src-tauri/android-templates/: ANDROID_SETUP.md  TeleprompterBridge.kt  TeleprompterPiPService.kt
cuecard-mobile/src-tauri/src/: android_pip.rs  ios_pip.rs  lib.rs  main.rs  teleprompter.rs
cuecard-mobile/workers/: welcome.js  welcome_worker.js
cuecard-website/: .eleventy.js  index.html  privacy.html  script.js  styles.css  terms.html
cuecard-website/privacy/: index.html
cuecard-website/src/: .htaccess  404.njk  _redirects  index.njk  privacy.njk  script.js  sitemap.xml  sitemap.xml.njk  styles.css  terms.njk  waitlist.php
cuecard-website/src/_data/: apps.json  blogs.json  faq.js  mobileProfessions.json  platforms.json  professions.json
cuecard-website/src/_includes/layouts/: platform.njk  profession.njk
cuecard-website/src/_includes/partials/: faq-default-desktop.njk  faq-default-mobile.njk  faq.njk  features.njk  footer.njk  hero.njk  nav.njk
cuecard-website/src/apps/: app.njk
cuecard-website/src/blog/: index.njk  post.njk
cuecard-website/src/desktop/: index.njk
cuecard-website/src/mobile-professions/: profession.njk
cuecard-website/terms/: index.html
extension/: .gitignore  README.md  package-lock.json  package.json
extension/manifests/: manifest.chrome.json  manifest.firefox.json
extension/scripts/: build.js  release.js  safari-convert.sh
extension/src/background/: background.js
extension/src/content/: content.js
extension/src/popup/: popup.css  popup.html  popup.js
