[package]
name = "cuecard-app"
version = "0.1.0"
description = "CueCard - Google Slides speaker notes viewer"
authors = ["you"]
edition = "2021"

[lib]
name = "curcard_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Web server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# State management
once_cell = "1.19"
parking_lot = "0.12"

# URL encoding
urlencoding = "2.1"

# Date/time handling
chrono = "0.4"
