[package]
name = "cuecard-app"
version = "1.1.1"
description = "Speaker notes visible only to you during screen sharing — for presentations, meetings, and more."
authors = ["CueCard"]
edition = "2021"

[lib]
name = "cuecard_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Web server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# State management
once_cell = "1.19"
parking_lot = "0.12"

# URL encoding
urlencoding = "2.1"

# Date/time handling
chrono = "0.4"

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }

# Windows-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
