[package]
name = "cuecard-mobile"
version = "0.1.0"
description = "CueCard Mobile - Floating teleprompter for presentations"
authors = ["CueCard"]
edition = "2021"

[lib]
name = "cuecard_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for Firebase auth (using rustls for cross-platform TLS)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Async runtime
tokio = { version = "1", features = ["rt", "macros"] }

# State management
once_cell = "1.19"
parking_lot = "0.12"

# URL encoding
urlencoding = "2.1"

# Date/time handling
chrono = "0.4"

# Regex for parsing
regex = "1.10"

# Logging
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
jni = "0.21"
ndk-context = "0.1"

[target.'cfg(target_os = "ios")'.dependencies]
oslog = "0.2"
